--- a/src/app/edit-dish/edit-dish.component.html
+++ b/src/app/edit-dish/edit-dish.component.html
@@ -1,3 +1,7 @@
+<div class="grid-container fluid dishes">
+	<app-modal-window [userName]="name"></app-modal-window>
+</div>
+
 <div id="dish" class="grid-container fluid dishes">
 	<h2>dishes</h2>
 	<div class=" grid-container fluid grid-x dishCenter">
@@ -6,7 +10,7 @@
 			<h3 class="nameDish text-center">{{dish.name}}</h3>
 			<div class="text-center">
 				<button type="button" class="btn btn-md btn-success"
-					data-toggle="modal" data-target="#myModal">Update</button>
+					data-toggle="modal" data-target="#myModal" (click)="modalWindow(dish)">Update</button>
 				<button type="button" class="btn btn-md btn-danger"
 					(click)="delete(dish); $event.stopPropagation()">Delete</button>
 			</div>
