--- a/src/app/modal-window/modal-window.component.css
+++ b/src/app/modal-window/modal-window.component.css
@@ -1,15 +1,19 @@
 ::-webkit-input-placeholder {
-	text-transform: lowercase;
+	text-transform: uppercase;
+	color: black;
 }
 
 ::-moz-placeholder {
-	text-transform: lowercase;
+	text-transform: uppercase;
+	color: black;
 }
 
 :-moz-placeholder {
-	text-transform: lowercase;
+	text-transform: uppercase;
+	color: black;
 }
 
 :-ms-input-placeholder {
-	text-transform: lowercase;
+	text-transform: uppercase;
+	color: black;
 }
