--- a/src/app/edit-dish/edit-dish.component.css
+++ b/src/app/edit-dish/edit-dish.component.css
@@ -22,3 +22,24 @@ img {
 	width: 300px;
 	height: 200px;
 }
+
+
+::-webkit-input-placeholder {
+	text-transform: uppercase;
+	color: black;
+}
+
+::-moz-placeholder {
+	text-transform: uppercase;
+	color: black;
+}
+
+:-moz-placeholder {
+	text-transform: uppercase;
+	color: black;
+}
+
+:-ms-input-placeholder {
+	text-transform: uppercase;
+	color: black;
+}
