--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,9 +7,12 @@
 	</div>
 	<div class="top-bar-right">
 		<ul class="menu">
-			<li><a routerLink="/addDish" routerLinkActive="active">Add Dish</a></li>
-			<li><a routerLink="/editDish" routerLinkActive="active">Edit Dish</a></li>
-			<li><a routerLink="/editDishPrice" routerLinkActive="active">Edit Price</a></li>
+			<li><a routerLink="/addDish" routerLinkActive="active">Add
+					Dish</a></li>
+			<li><a routerLink="/editDish" routerLinkActive="active">Edit
+					Dish</a></li>
+			<li><a routerLink="/editDishPrice" routerLinkActive="active">Edit
+					Price</a></li>
 		</ul>
 	</div>
 </div>
