--- a/src/app/edit-dish/edit-dish.component.html
+++ b/src/app/edit-dish/edit-dish.component.html
@@ -6,11 +6,18 @@
 	<h2>dishes</h2>
 	<div class=" grid-container fluid grid-x dishCenter">
 		<div class="cell small-4 text-center" *ngFor="let dish of dishes">
+
 			<img src={{dish.imgURL}} alt="image1" />
-			<h3 class="nameDish text-center">{{dish.name}}</h3>
+			<div class="grid-x text-center">
+				<div class="small-6 cell text-center">
+					<h3 class="nameDish text-center">{{dish.name}}</h3>
+				</div>
+				<div class="small-6 cell text-center">{{dish.price}}$</div>
+			</div>
 			<div class="text-center">
 				<button type="button" class="btn btn-md btn-success"
-					data-toggle="modal" data-target="#myModal" (click)="modalWindow(dish)">Update</button>
+					data-toggle="modal" data-target="#myModal"
+					(click)="modalWindow(dish)">Update</button>
 				<button type="button" class="btn btn-md btn-danger"
 					(click)="delete(dish); $event.stopPropagation()">Delete</button>
 			</div>
