Installed angular material

--- a/src/app/modal-window/modal-window.component.html
+++ b/src/app/modal-window/modal-window.component.html
@@ -1,4 +1,5 @@
-<div id="myModal" class="modal fade" tabindex="-1"> <!--  *ngIf="closeModal" -->
+<div id="myModal" class="modal fade" tabindex="-1">
+	<!--  *ngIf="closeModal" -->
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
@@ -25,13 +26,11 @@
 						<button type="submit" class="btn btn-md btn-success">update
 							dish</button>
 					</div>
-
-
-
 				</form>
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-default" type="button" data-dismiss="modal" #closeBtn>Close</button>
+				<button class="btn btn-default" type="button" data-dismiss="modal"
+					#closeBtn>Close</button>
 			</div>
 		</div>
 	</div>
