--- a/src/app/form-add-dish/form-add-dish.component.css
+++ b/src/app/form-add-dish/form-add-dish.component.css
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 .dishes, fieldset{margin-top: 90px; margin-bottom: 140px;}
 
 .nameDish::first-letter {text-transform: capitalize;}
