--- a/src/app/add-dish/add-dish.component.html
+++ b/src/app/add-dish/add-dish.component.html
@@ -2,7 +2,14 @@
 	<app-form-add-dish (onChanged)="onChanged($event)"></app-form-add-dish>
 </div>
 
-				
+<div>
+	<p-calendar [(ngModel)]="date1"></p-calendar>
+	{{date1|date}}
+</div>
+<div>
+	<p-calendar [(ngModel)]="date2"></p-calendar>
+	{{date2|date}}
+</div>
 <div id="dish" class="grid-container fluid">
 	<h2>dishes</h2>
 	<div class=" grid-container fluid grid-x dishCenter">
