--- a/src/app/add-dish/add-dish.component.css
+++ b/src/app/add-dish/add-dish.component.css
@@ -7,9 +7,6 @@
 	text-transform: capitalize;
 }
 
-div .small-4 {
-	margin-bottom: 60px;
-}
 
 h2 {
 	text-align: center;
@@ -26,3 +23,8 @@ img {
 h3 {
 	font-weight: bold;
 }
+span {font-weight: bold;}
+
+.dishinforc {background-color: rgb( 196, 239, 221);}
+
+.clendar {margin-bottom: 10px;}
