--- a/src/app/form-add-dish/form-add-dish.component.html
+++ b/src/app/form-add-dish/form-add-dish.component.html
@@ -1,9 +1,9 @@
 <div id="dish" class="grid-container fluid">
 	<h2>add dishes</h2>
-	<div class=" grid-container fluid grid-x dishCenter">
+	<div class=" grid-container">
 		<div class="cell small-4 text-center">
 			<form [formGroup]="myForm" novalidate #f="ngForm"
-				(ngSubmit)="onSubmit(f.value); f.value=''">
+				(ngSubmit)="onSubmit(f.value); f.value='';myForm.reset();">
 				<div class="form-group">
 					<label for="name">Name</label> <input type="text" id="name"
 						class="form-control" formControlName="name" name="name" ngModel>
@@ -30,6 +30,20 @@
 						*ngIf="myForm.controls['price'].invalid && myForm.controls['price'].touched">
 						Missing price</div>
 				</div>
+
+
+				<div class="grid-x text-center form-group">
+					<div class="small-6 cell text-center">
+						<p-calendar [(ngModel)]="date1" formControlName="calendar1" dateFormat="dd.mm.y" dataType="string"
+							(onSelect)="selectDate($event)"></p-calendar>
+					</div>
+					<div class="small-6 cell text-center">
+						<p-calendar [(ngModel)]="date2" formControlName="calendar2" dateFormat="dd.mm.y"
+							 tabindex="1" [disabledDays]="[1,2,3,4,5,6]" readonlyInput="readonlyInput" dataType="string"></p-calendar>
+					</div>
+				</div>
+
+
 
 				<div class="text-center">
 					<button type="submit" class="btn btn-md btn-success"
