Added new design.

--- a/src/app/form-add-dish/form-add-dish.component.css
+++ b/src/app/form-add-dish/form-add-dish.component.css
@@ -2,20 +2,9 @@
 	margin-top: 90px;
 	margin-bottom: 140px;
 }
-
+.nameCalendar{margin-bottom: 10px;}
 .nameDish::first-letter {
 	text-transform: capitalize;
-}
-
-div .small-4 {
-	margin-bottom: 60px;
-}
-
-h2 {
-	text-align: center;
-	text-transform: uppercase;
-	font-weight: bold;
-	margin-bottom: 40px;
 }
 
 input.ng-touched.ng-invalid {
@@ -24,4 +13,23 @@ input.ng-touched.ng-invalid {
 
 input.ng-touched.ng-valid {
 	border: solid green 2px;
+}
+
+form .form-icons {
+  text-align: center;
+}
+
+form .form-icons .input-group-label {
+  background-color: #1779ba;
+  border-color: #1779ba;
+}
+
+form .form-icons .input-group-field {
+  border-color: #1779ba;
+}
+
+
+form .form-icons .fa {
+  color: white;
+  width: 1rem;
 }
