--- a/src/app/add-dish/add-dish.component.html
+++ b/src/app/add-dish/add-dish.component.html
@@ -1,17 +1,64 @@
-<div class="grid-container fluid dishes">
-	<app-form-add-dish (onChanged)="onChanged($event)"></app-form-add-dish>
-</div>
-<div id="dish" class="grid-container fluid">
-	<h2>dishes</h2>
-	<div class=" grid-container fluid grid-x dishCenter">
-		<div class="cell small-4 text-center" *ngFor="let dish of dishes">
-			<h3 class="nameDish text-center">{{dish.name}}</h3>
-			<img src={{dish.imgURL}} alt="image1" />
-			<div class="text-center">
-				<span>Date: </span>{{dish.calendar1}} <span> - </span>
-				{{dish.calendar2}} <span>Price: </span>{{dish.price}}$
-			</div>
 
+
+
+
+
+
+
+<head>
+<link rel="stylesheet"
+	href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
+</head>
+<body>
+
+
+	<div class="row dishes">
+		<div class="medium-6 columns">
+			<div class="row small-up-2">
+				<div class="column">
+					<img class="thumbnail" src="http://placehold.it/250x200">
+				</div>
+				<div class="column">
+					<img class="thumbnail" src="http://placehold.it/250x200">
+				</div>
+				<div class="column">
+					<img class="thumbnail" src="http://placehold.it/250x200">
+				</div>
+				<div class="column">
+					<img class="thumbnail" src="http://placehold.it/250x200">
+				</div>
+			</div>
 		</div>
-	</div> 
-</div>
+
+		<div class="medium-6 large-5 columns">
+			<h3>Add dish</h3>
+			<p>To add a new dish, please fill out all the fields in the form
+				below</p>
+
+			<app-form-add-dish (onChanged)="onChanged($event)"></app-form-add-dish>
+		</div>
+	</div>
+	
+	<div id="dish" class="grid-container fluid">
+		<h2>dishes</h2>
+		<div class=" grid-container fluid grid-x dishCenter">
+			<div class="cell small-3 text-center dishBord"
+				*ngFor="let dish of dishes">
+				<h3 class="nameDish text-center">{{dish.name}}</h3>
+				<img src={{dish.imgURL}} alt="image1" />
+				<div class="text-center">
+					<span>Date: </span>{{dish.calendar1}} <span> - </span>
+					{{dish.calendar2}} <span>Price: </span>{{dish.price}}$
+				</div>
+
+			</div>
+		</div>
+	</div>
+	
+	
+
+</body>
+
+
+
+
