--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,35 @@
 
-<div class="top-bar">
-	<div class="top-bar-left">
-		<ul class="menu">
-			<li class="logo"><img src={{urlLogo}} alt="image1" /></li>
-		</ul>
+<head>
+<link rel="stylesheet" href="/assets/images/foundation.min.css">
+
+</head>
+
+
+<body>
+	<div class="top-bar">
+		<div class="top-bar-left">
+			<ul class="menu">
+				<li class="logo"><img src={{urlLogo}} alt="image1" /></li>
+				<h4>Villula restaurant</h4>
+			</ul>
+		</div>
+		
+		
+		<div class="top-bar-right">
+			<ul class="menu">
+				<li><a routerLink="/addDish" routerLinkActive="active">Add
+						Dish</a></li>
+				<li><a routerLink="/editDish" routerLinkActive="active">Edit
+						Dish</a></li>
+				<li><a routerLink="/editDishPrice" routerLinkActive="active">Edit
+						Price</a></li>
+			</ul>
+		</div>
 	</div>
-	<div class="top-bar-right">
-		<ul class="menu">
-			<li><a routerLink="/addDish" routerLinkActive="active">Add
-					Dish</a></li>
-			<li><a routerLink="/editDish" routerLinkActive="active">Edit
-					Dish</a></li>
-			<li><a routerLink="/editDishPrice" routerLinkActive="active">Edit
-					Price</a></li>
-		</ul>
-	</div>
-</div>
 
 
 
-<router-outlet></router-outlet>
+	<router-outlet></router-outlet>
+	
+	<app-restaurant-footer></app-restaurant-footer>
+</body>
