--- a/src/app/add-dish/add-dish.component.html
+++ b/src/app/add-dish/add-dish.component.html
@@ -1,64 +1,60 @@
-
-
-
-
-
-
-
-<head>
-<link rel="stylesheet"
-	href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-</head>
-<body>
-
-
-	<div class="row dishes">
-		<div class="medium-6 columns">
-			<div class="row small-up-2">
-				<div class="column">
-					<img class="thumbnail" src="http://placehold.it/250x200">
-				</div>
-				<div class="column">
-					<img class="thumbnail" src="http://placehold.it/250x200">
-				</div>
-				<div class="column">
-					<img class="thumbnail" src="http://placehold.it/250x200">
-				</div>
-				<div class="column">
-					<img class="thumbnail" src="http://placehold.it/250x200">
-				</div>
+<div class="row dishes">
+	<div class="medium-6 large-6 columns">
+		<div class="row small-up-2">
+			<div class="column">
+				<img class="thumbnail"
+					src="https://possector.com/wordpress/wp-content/uploads/2014/10/restaurant-kitchen-design-island-configuration.jpg">
 			</div>
-		</div>
+			<div class="column">
+				<img class="thumbnail"
+					src="http://www.paulholdengraber.com/wp-content/uploads/2015/09/k-1024x653.jpg">
+			</div>
+			<div class="column">
+				<img class="thumbnail"
+					src="https://images.template.net/wp-content/uploads/2016/04/05131347/Royal-Restaurant-Menu-Template.jpg">
+			</div>
+			<div class="column">
+				<img class="thumbnail"
+					src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS92aR5WDq0K6vnPJ--HcfPdThqz7X8qHisszD5zIwtQfqEGZOL">
+			</div>
 
-		<div class="medium-6 large-5 columns">
-			<h3>Add dish</h3>
-			<p>To add a new dish, please fill out all the fields in the form
-				below</p>
 
-			<app-form-add-dish (onChanged)="onChanged($event)"></app-form-add-dish>
 		</div>
 	</div>
-	
-	<div id="dish" class="grid-container fluid">
-		<h2>dishes</h2>
-		<div class=" grid-container fluid grid-x dishCenter">
-			<div class="cell small-3 text-center dishBord"
-				*ngFor="let dish of dishes">
-				<h3 class="nameDish text-center">{{dish.name}}</h3>
-				<img src={{dish.imgURL}} alt="image1" />
-				<div class="text-center">
-					<span>Date: </span>{{dish.calendar1}} <span> - </span>
-					{{dish.calendar2}} <span>Price: </span>{{dish.price}}$
-				</div>
 
-			</div>
-		</div>
+
+	<div class="medium-6 large-6 columns">
+		<h3>Add dish</h3>
+		<p>To add a new dish, please fill out all the fields in the form
+			below</p>
+
+		<app-form-add-dish (onChanged)="onChanged($event)"></app-form-add-dish>
 	</div>
-	
-	
-
-</body>
+	<hr>
+</div>
 
 
+<div class="row small-up-3 large-up-3">
+<div>	<hr>
+	<h2 class="captionDishes">dishes</h2>
+	<hr>
+	<div class="column text-center conteinerDishes"
+		*ngFor="let dish of dishes">
+
+		<div class=" thumbnail dishBord">
+			<h5 class="nameDish text-center">{{dish.name}}</h5>
+			<p>
+				<img class="" src={{dish.imgURL}}>
+			</p>
+
+			<p>Price: {{dish.price}}$</p>
+			<hr class="noMargin">
+			<p>Date: {{dish.calendar1}} - {{dish.calendar2}}</p>
+
+		</div>
+
+	</div></div>
+
+</div>
 
 
