--- a/src/app/add-dish/add-dish.component.html
+++ b/src/app/add-dish/add-dish.component.html
@@ -1,4 +1,4 @@
-<div class="row dishes">
+<div class="row dishes bgDishes">
 	<div class="medium-6 large-6 columns">
 		<div class="row small-up-2">
 			<div class="column">
@@ -30,12 +30,11 @@
 
 		<app-form-add-dish (onChanged)="onChanged($event)"></app-form-add-dish>
 	</div>
-	<hr>
 </div>
 
 
-<div class="row small-up-3 large-up-3">
-<div>	<hr>
+<div class="row small-up-3 large-up-3 bgDishes">
+<div>
 	<h2 class="captionDishes">dishes</h2>
 	<hr>
 	<div class="column text-center conteinerDishes"
@@ -56,5 +55,7 @@
 	</div></div>
 
 </div>
+
+
 
 
