--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,11 +17,11 @@
 		
 		<div class="top-bar-right">
 			<ul class="menu">
-				<li><a routerLink="/addDish" routerLinkActive="active">Add
+				<li><a routerLink="/add-dish" routerLinkActive="active">Add
 						Dish</a></li>
-				<li><a routerLink="/editDish" routerLinkActive="active">Edit
+				<li><a routerLink="/edit-dish" routerLinkActive="active">Edit
 						Dish</a></li>
-				<li><a routerLink="/editDishPrice" routerLinkActive="active">Edit
+				<li><a routerLink="/edit-dish-price" routerLinkActive="active">Edit
 						Price</a></li>
 			</ul>
 		</div>
