--- a/src/app/form-add-dish/form-add-dish.component.css
+++ b/src/app/form-add-dish/form-add-dish.component.css
@@ -1,8 +1,7 @@
-.dishes, fieldset {
-	margin-top: 90px;
-	margin-bottom: 140px;
+.nameCalendar {
+	margin-bottom: 10px;
 }
-.nameCalendar{margin-bottom: 10px;}
+
 .nameDish::first-letter {
 	text-transform: capitalize;
 }
@@ -11,91 +10,38 @@ input.ng-touched.ng-invalid {
 	border: solid red 2px;
 }
 
-form {z-index: 1;}
-
 input.ng-touched.ng-valid {
 	border: solid green 2px;
 }
 
+form {
+	z-index: 1;
+}
+
 form .form-icons {
-  text-align: center;
+	text-align: center;
 }
 
 form .form-icons .input-group-label {
-  background-color: #1779ba;
-  border-color: #1779ba;
+	background-color: rgb(44, 56, 64);
+	border-color: rgb(44, 56, 64);
 }
-
-form .form-icons .input-group-field {
-  border-color: #1779ba;
-}
-
 
 form .form-icons .fa {
-  color: white;
-  width: 1rem;
+	color: white;
+	width: 1rem;
 }
+.button.disabled,
+.button.disabled:hover,
+.button.disabled:focus,
+.button[disabled],
+.button[disabled]:hover,
+.button[disabled]:focus{background-color: rgb(44, 56, 64);}
 
+.button,
+.button:hover,
+.button:focus{background-color: rgb(44, 56, 64);}
 
-
-
-
-
-$alert-box-opacity: 0.2;
-
-.alert-box {
-  padding-right: 3.25rem;
-  width: 100%;
-
-  &.callout {
-    color: $white;
-    font-weight: bold;
-  }
-
-  &.alert {
-    border: 3px solid $alert-color;
-    border-radius: 5px;
-    background-color:rgba($alert-color, $alert-box-opacity);
-  }
-
-  &.warning {
-    border: 3px solid $warning-color;
-    border-radius: 5px;
-    background-color:rgba($warning-color, $alert-box-opacity);
-  }
-
-  &.success {
-    border: 3px solid $success-color;
-    border-radius: 5px;
-    background-color:rgba($success-color, $alert-box-opacity);
-  }
-
-  &.info {
-    border: 3px solid $primary-color;
-    border-radius: 5px;
-    background-color:rgba($primary-color, $alert-box-opacity);
-  }
-
-  i {
-    border: 2px solid $white;
-    border-radius: 50%;
-    padding: .3em .325em;
-    margin-right: 0.5rem;
-  }
-
-  .close-button {
-    color: rgba($white, 0.5);
-    font-size: 2rem;
-    @include vertical-center;
-    right: 1rem;
-    font-weight: bold;
-  }
-}
-
-
-
-
-
-
-
-
+.callout{position: absolute; z-index: 10098 !important;}
+.messeng {margin-right:45px; }
+.cloesMesseng {font-size: 0.7em;}
