Added final nav-bar-menu.

--- a/src/app/add-dish/add-dish.component.html
+++ b/src/app/add-dish/add-dish.component.html
@@ -1,13 +1,14 @@
+
 <div class="row dishes bgDishes">
 	<div class="medium-6 large-6 columns">
 		<div class="row small-up-2">
 			<div class="column">
 				<img class="thumbnail"
-					src="https://possector.com/wordpress/wp-content/uploads/2014/10/restaurant-kitchen-design-island-configuration.jpg">
+					src={{menu}}>
 			</div>
 			<div class="column">
 				<img class="thumbnail"
-					src="http://www.paulholdengraber.com/wp-content/uploads/2015/09/k-1024x653.jpg">
+					src={{kitchen}}>
 			</div>
 			<div class="column">
 				<img class="thumbnail"
