--- a/src/app/form-add-dish/form-add-dish.component.html
+++ b/src/app/form-add-dish/form-add-dish.component.html
@@ -111,7 +111,7 @@
 		</div>
 
 		<div class="row">
-			<div class="small-12 text-center">
+			<div class="small-12 text-center closeButton">
 				<button type="submit" class="button large expanded"
 					[disabled]="myForm.invalid">Add dish</button>
 			</div>
