--- a/src/app/add-dish/add-dish.component.css
+++ b/src/app/add-dish/add-dish.component.css
@@ -1,7 +1,11 @@
 .nameDish::first-letter {
 	text-transform: capitalize;
+	font-weight: bold;
 }
-
+ .nameDish {
+	font-weight: bold;
+	color: rgb(49, 42, 39);
+}
 .dishBord {
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 	margin: 3px;
@@ -14,33 +18,74 @@ h2 {
 	margin-bottom: 40px;
 }
 
-img {
-	width: 300px;
-	height: 200px;
-}
-
 h5 {
 	font-weight: bold;
 }
 
 .conteinerDishes {
-	margin-bottom: 20px; 
+	margin-bottom: 20px;
+}
+
+.captionDishes {
+	background-color: rgb(49, 42, 39);
+	color: white;
+	margin-bottom: 70px;
+}
+
+.bgDishes {
+	background-color: rgba(171, 130, 77, .6);
+}
+
+.dishes {
+	padding-top: 130px;
+	padding-bottom: 70px;
+}
+
+.down {
+	margin-bottom: 20px;
+	margin-top: 10px;
 }
 
 .noMargin {
 	margin: 0;
+}
+
+.card-user-container {
+	margin-bottom: 5rem;
+	background-color: #fefefe; overflow : hidden;
 	padding: 0;
+	border-radius: 0;
+	overflow: hidden;
 }
 
-.captionDishes {
-	background-color: rgb(31, 97, 141);
+.card-user-container .card-user-avatar .user-image {
+	display: block;
+	margin: auto;
+	border-radius: 50%;
+	width: 14rem;
+	height: 11rem;
+	padding: 0.9rem;
+}
+
+.card-user-container .card-user-avatar .user-image:hover {
+	-webkit-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+.card-user-container .card-user-bio {
+	padding-top: 0.5rem;
+	text-align: center;
+	font-weight: bold;
+	color: rgb(49, 42, 39);
+}
+
+.card-user-container .card-user-social {
+	background: rgba(171, 130, 77, .6);
+	text-align: center;
+	padding-top: 0.9rem;
+	padding-bottom: 0.1rem;
 	color: white;
-}
-
-.bgDishes {
-	background-color: rgba(44, 56, 64, .1);
-	padding: 10px;
-}
-.dishes {
-	padding: 100px 10px 10px 60px;
+	/*   color: rgb(49, 42, 39); */
+	font-weight: bold;
 }
