--- a/src/app/restaurant-footer/restaurant-footer.component.css
+++ b/src/app/restaurant-footer/restaurant-footer.component.css
@@ -1,19 +1,12 @@
 .marketing-site-footer {
 	background-color: rgb(35, 31, 32);
-	color: #8aa0ae;
+	color: rgb(233, 205, 168);
 	padding: 2rem 0 0;
-}
-
-.marketing-site-footer .marketing-site-footer-menu-social a {
-	color: #fefefe;
+	font-family: 'Times New Roman', Times, serif;
 }
 
 .marketing-site-footer .column-block {
 	margin-bottom: 30px;
-}
-
-.marketing-site-footer>.row {
-	margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 39.9375em) {
@@ -23,9 +16,7 @@
 }
 
 .marketing-site-footer-name {
-	color: #fefefe;
 	margin-bottom: 1rem;
-	font-size: 2rem;
 }
 
 .marketing-site-footer-title {
@@ -42,11 +33,13 @@
 }
 
 .marketing-site-footer-block .fa {
-	font-size: 2rem;
-	color: #020304;
+	font-size: 1rem;
+	color: white;
 }
 
 .marketing-site-footer-block p {
 	margin-left: 1rem;
 	line-height: 1.125rem;
 }
+
+.qmargin{margin-left: 3.5rem;}
