--- a/src/app/restaurant-footer/restaurant-footer.component.html
+++ b/src/app/restaurant-footer/restaurant-footer.component.html
@@ -1,14 +1,14 @@
 <footer class="marketing-site-footer">
   <div class="row medium-unstack">
     <div class="medium-4 columns">
-      <h4 class="marketing-site-footer-name">Villula restaurant</h4>
-      <p>"Primus inter pares"</p>
+      <h4 class="marketing-site-footer-name"><img src={{nameFooter}}></h4>
+      <p class="qmargin">"Primus inter pares"</p>
     </div>
-    <div class="medium-4 columns">
-       <h4 class="marketing-site-footer-title">Contact Info</h4>
+    <div class="medium-4 columns text-center"> 
+       <h4 class="marketing-site-footer-title"><img src={{contactFooter}}></h4>
       <div class="marketing-site-footer-block">
         <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <p>100 W Rincon<br>San Francisco, CA 94015</p>
+        <p>1 Central Park West, New York, NY 10023, USA</p>
       </div>
       <div class="marketing-site-footer-block">
         <i class="fa fa-phone" aria-hidden="true"></i>
@@ -16,29 +16,33 @@
       </div>
       <div class="marketing-site-footer-block">
         <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <p>yetirules@fakeemail.com</p>
+        <p>villularestaurant.@gmail</p>
+      </div>
+      <div class="marketing-site-footer-block">
+        <i class="fa fa-globe" aria-hidden="true"></i>
+        <p> 11:45AM-11PM</p>
       </div>
     </div>
     <div class="medium-4 columns">
-      <h4 class="marketing-site-footer-title">Atmosphere</h4>
+      <h4 class="marketing-site-footer-title text-center"><img src={{atmosphereFooter}}></h4>
       <div class="row small-up-3">
         <div class="column column-block">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsBTbZ_yVTUZCe1rlJ92tIjrQR3K_ABozZMmX3zI_1RTM5EBNr" alt="" />
+          <img src={{imgfooter1}} alt="" />
         </div>
         <div class="column column-block">
-          <img src="http://www.osteoface.ru/userfiles/editor/large/126_front_banket.jpg" alt="" />
+          <img src={{imgfooter2}} alt="" />
         </div>
         <div class="column column-block">
-          <img src="http://treliorestaurant.com/wp-content/uploads/2017/08/food2.jpg" alt="" />
+          <img src={{imgfooter3}} alt="" />
         </div>
         <div class="column column-block">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT753pzBHhP7r2feuTK13rlWASRWZkGPVmGQsjZVpqu_TS-SBCp" alt="" />
+          <img src={{imgfooter4}} alt="" />
         </div>
         <div class="column column-block">
-          <img src="http://www.designersraum.com/pictures/Main-Dining-Room-Interior-Design-of-Prospect-Restaurant-San-Francisco.jpg" alt="" />
+          <img src={{imgfooter5}} alt="" />
         </div>
         <div class="column column-block">
-          <img src="http://www.designersraum.com/pictures/Bar-Interior-Design-View-From-Front-Door-of-Prospect-Restaurant-San-Francisco.jpg" alt="" />
+          <img src={{imgfooter6}} alt="" />
         </div>
       </div>
     </div>
